--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "airtable": "^0.12.2",
     "dotenv": "^16.4.5",
     "node-fetch": "^2.7.0",
-    "p-limit": "^6.1.0"
+    "p-limit": "^6.1.0",
+    "sharp": "^0.33.5"
   }
 }
