--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,4 @@
 
 [functions]
   directory = "netlify/functions"
-  external_node_modules = ["node-fetch"]
+  external_node_modules = ["node-fetch", "google-auth-library", "airtable"]
