--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,13 @@
 [build]
-  command = "echo 'Building...' && exit 0"  
-  publish = "."  
+  command = "echo 'Building...' && exit 0"
+  publish = "."
 
 [functions]
   directory = "netlify/functions"
   external_node_modules = ["node-fetch", "google-auth-library", "airtable"]
+
+[[headers]]
+for = "/*"
+[headers.values]
+  Cross-Origin-Opener-Policy = "same-origin-allow-popups"
+  Cross-Origin-Embedder-Policy = "require-corp"
