--- a/netlify.toml
+++ b/netlify.toml
@@ -9,5 +9,9 @@
 [[headers]]
 for = "/*"
 [headers.values]
-Content-Security-Policy = "script-src 'self' https://identity.netlify.com"
-
+Content-Security-Policy = "
+    default-src 'self'; 
+    img-src 'self' https://orpps.netlify.app/; 
+    style-src 'self' https://orpps.netlify.app 'unsafe-inline'; 
+    script-src 'self' https://identity.netlify.com 'unsafe-inline'; 
+    connect-src 'self' https://identity.netlify.com"
