--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,12 @@ for = "/*"
 [headers.values]
 Content-Security-Policy = "default-src 'self'; script-src 'self' https://identity.netlify.com 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://identity.netlify.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://identity.netlify.com; frame-src https://identity.netlify.com;"
 
+[[headers]]
+for = "/*.js"
+[headers.values]
+Content-Type = "application/javascript"
+
+[[headers]]
+for = "/*.css"
+[headers.values]
+Content-Type = "text/css"
